<resources>
    <string name="app_name">AppATACC</string>
    <string name="atacc">ATACC</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="btn_Registrate">Registrate</string>
    <string name="link_ayuda">Ayuda</string>
    <string name="volver"><![CDATA[<]]></string>

    <!--PANTALLA INGRESAR -->
    <string name="tituloIngresar">INGRESAR</string>
    <string name="forgot">Olvidé mi contraseña</string>
    <string name="registrar">Crear Cuenta</string>
    <string name="emailUsuario">Email</string>
    <string name="contrasenia">Contraseña</string>

    <!-- PANTALLA REGISTRO -->
    <string name="tituloRegistro">REGISTRATE</string>
    <string name="allReady">Ya tengo cuenta</string>

    <!-- PANTALLA BIENVENIDA -->
    <string name="tituloBienvenide">BIENVENID@S</string>
    <string name="noticiasATACC">Noticias ATACC</string>
    <string name="beneficiosATACC">Cátalogo de beneficios</string>
    <string name="calculadoraATACC">Calculadora de sueldos</string>
    <string name="afiliateATACC">Afiliate</string>
    <string name="credencialesATACC">Administrar Afiliación</string>

    <!-- PANTALLA AFILIACION -->
    <string name="tituloAfiliate">AFILIATE</string>
    <string name="dniUsuario">DNI</string>
    <string name="nacimientoUsuario">Fecha de Nacimiento</string>
    <string name="familiareslUsuario">Familiares a cargo</string>
    <string name="empresaUsuario">Empresa</string>

    <!-- PANTALLA BENEFICIOS -->
    <string name="tituloBeneficios">BENEFICIOS</string>

    <!-- PANTALLA CALCULADORA -->
    <string name="tituloCalculadora">CALCULADORA</string>
    <string name="calc_construction">Estamos trabajando para vos. Hacé clic en la calculadora para ir al enlace externo</string>
    <string name="goToCalc">Estamos trabajando para mejorar la aplicaciòn.</string>
    <string name="clicToCalc">Hacé clic en la calculadora para ir al sitio externo</string>

    <!-- PANTALLA CREDENCIALES -->
    <string name="tituloCredenciales">MIS CREDENCIALES</string>

    <!-- PANTALLA AYUDA -->
    <string name="tituloAyuda">AYUDA</string>


    <!-- PANTALLA CONTACTO -->
    <string name="tituloContacto">CONTACTO</string>


</resources>