<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_atacc"
    tools:context=".IngresarActivity">

    <TextView
        android:id="@+id/IngresarPageTextATACC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/tituloIngresar"
        android:textColor="@color/whiteATACC"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IngresarPageLogoImg"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngresarPageTextATACC"
        tools:srcCompat="@drawable/img_placeholder" />

    <Button
        android:id="@+id/IngresarPageButtonIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:width="175dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/btn_Ingresar"
        android:textColor="@color/whiteATACC"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngresarPagePassword" />

    <TextView
        android:id="@+id/IngresarPageTextAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/link_ayuda"
        android:textColor="@color/mainColor"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/IngresarPageTextRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/registrar"
        android:textColor="@color/mainColor"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/IngresarPageTextForgot"
        app:layout_constraintTop_toBottomOf="@+id/IngresarPageButtonIngresar" />

    <TextView
        android:id="@+id/IngresarPageTextForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot"
        android:textColor="@color/mainColor"
        android:textSize="12dp"
        app:layout_constraintEnd_toStartOf="@+id/IngresarPageTextRegistrar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngresarPageButtonIngresar" />

    <EditText
        android:id="@+id/IngresarPageEmail"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:padding="8dp"
        android:background="@drawable/texfieldbackground"
        android:ems="10"
        android:hint="@string/emailUsuario"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngresarPageLogoImg" />

    <EditText
        android:id="@+id/IngresarPagePassword"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="8dp"
        android:background="@drawable/texfieldbackground"

        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:textColorHint="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngresarPageEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>