<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_atacc"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/StartPageTextATACC"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_marginTop="20dp"
        android:text="@string/atacc"
        android:textColor="@color/darkColor"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartPageLogoImg"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/StartPageLogoImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/atacc_logo180" />

    <Button
        android:id="@+id/StartPageButtonIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:width="175dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/btn_Ingresar"
        android:textColor="@color/whiteATACC"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartPageTextATACC" />

    <Button
        android:id="@+id/StartPageButtonRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="175dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/btn_Registrate"
        android:textColor="@color/whiteATACC"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/StartPageTextAyuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartPageButtonIngresar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/StartPageTextAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/link_ayuda"
        android:textColor="@color/mainColor"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>