<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_atacc"
    tools:context=".CalculadoraActivity">

    <TextView
        android:id="@+id/CalculadoraPageBtnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/volver"
        android:textColor="@color/whiteATACC"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CalculadoraPageTextATACC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/tituloCalculadora"
        android:textColor="@color/whiteATACC"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CalculadoraPageBtnVolver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/CalculadoraPageCalcLink"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="130dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalculadoraPageTextATACC"
        app:lottie_autoPlay="true"
        app:lottie_fileName="atacc_calculator.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true">

    </com.airbnb.lottie.LottieAnimationView>

    <TextView
        android:id="@+id/CalculadoraPageWorking"
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/robotoregular"
        android:gravity="center_horizontal"
        android:text="@string/goToCalc"
        android:textColor="@color/darkColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalculadoraPageCalcLink" />

    <TextView
        android:id="@+id/CalculadoraPageGoTo"
        android:layout_width="251dp"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoregular"
        android:gravity="center_horizontal"
        android:text="@string/clicToCalc"
        android:textColor="@color/darkColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalculadoraPageWorking" />


</androidx.constraintlayout.widget.ConstraintLayout>